fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
    background-color: var(--slate-300);
 }
 .container {
-   max-width: 144rem;
+   max-width: 1440px;
    height: 100vh;
    margin: 0 auto;
    display: flex;
@@ -28,14 +28,14 @@ body {
 }
 .card {
    background-color: var(--white);
-   padding: 1.6rem;
-   padding-bottom: 4rem;
-   width: 32rem;
-   height: 49.9rem;
-   border-radius: 2rem;
+   padding: 16px;
+   padding-bottom: 40px;
+   width: 320px;
+   height: 499px;
+   border-radius: 20px;
    display: flex;
    flex-direction: column;
-   gap: 2.4rem;
+   gap: 24px;
 }
 .card img {
    width: 100%;
@@ -46,15 +46,17 @@ body {
    display: flex;
    flex-direction: column;
    text-align: center;
-   gap: 1.6rem;
+   gap: 16px;
 }
 .card-content h3 {
+   font-size: 2.2rem;
    color: var(--slate-900);
    font-weight: 700;
    line-height: 120%;
    letter-spacing: 0;
 }
 .card-content p {
+   font-size: 1.5rem;
    color: var(--slate-500);
    font-weight: 400;
    line-height: 140%;
